--- a/Front-end/registro.html
+++ b/Front-end/registro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ReciclaFácil - Registrar Descarte</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
@@ -44,4 +44,5 @@
             </form>
         </div>
     </main>
+
     
